@@ -4,5 +4,6 @@
  :deps  {org.clojure/clojure {:mvn/version "1.11.3"}
          camel-snake-kebab/camel-snake-kebab {:mvn/version "0.4.3"}
          io.opentelemetry/opentelemetry-api {:mvn/version "1.40.0"}
+         io.opentelemetry.instrumentation/opentelemetry-instrumentation-api {:mvn/version "2.9.0"}
          io.opentelemetry.semconv/opentelemetry-semconv {:mvn/version "1.26.0-alpha"}
          io.opentelemetry.semconv/opentelemetry-semconv-incubating {:mvn/version "1.26.0-alpha"}}}
